// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`uses default formatter 1`] = `
<time
  className="RelativeTime-root"
  dateTime="2018-12-17T03:24:00.000Z"
  title="2018-12-17T03:24:00.000Z"
>
  2018-12-17T03:24:00.000Z
</time>
`;

exports[`uses formatter from context 1`] = `
<time
  className="RelativeTime-root"
  dateTime="2018-12-17T03:24:00.000Z"
  title="2018-12-17T03:24:00.000Z"
>
  My Context Formatter
</time>
`;

exports[`uses formatter from props 1`] = `
<time
  className="RelativeTime-root"
  dateTime="2018-12-17T03:24:00.000Z"
  title="2018-12-17T03:24:00.000Z"
>
  My Props Formatter
</time>
`;
